# Metl-Vibecorder

./: .env.example  .env.root  .gitignore  README.md  docker-compose.prod.yml  docker-compose.yml  nginx.conf  package-lock.json
11labs/: .env.example  README.md  package-lock.json  package.json
11labs/src/: server.ts
11labs/src/public/: app.js  index.html  styles.css
apps/agent/: Dockerfile  requirements.txt
apps/agent/src/: config.py  main.py
apps/agent/src/agents/: vibecoder_agent.py
apps/agent/src/core/: internal_docs.py  safety_rules.py  session_state.py
apps/agent/src/prompts/: agent_prompt.py  ask_prompt.py  plan_prompt.py  repair_prompt.py  review_prompt.py  super_prompt.py
apps/agent/tests/: test_file_edits.py  test_safety.py
apps/web/: .env.production  Dockerfile  package-lock.json  package.json  tsconfig.json
apps/web/prisma/: schema.prisma
apps/workspace-image/: Dockerfile
cli/: .env.example  README.md  package-lock.json  package.json
cli/ide-demo/: .env.example  .gitignore  README.md  index.html  package-lock.json  package.json  tsconfig.json  tsconfig.server.json  vite.config.ts
cli/src/: index.ts
docs/: testing.md
gcp/: .env.example  README.md  package-lock.json  package.json  tsconfig.json
gcp/src/: index.ts
web-test/: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
web-test/scenarios/: metl_local_smoke.json
web-test/scripts/: setup_mac.sh
web-test/src/web_test/: __init__.py  __main__.py  agent.py  azure.py  config.py  doctor.py  llm.py  ollama.py  reports.py  smoke.py
(+95 files in other folders)
