[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "metl-web-test"
version = "0.1.0"
description = "Local Browser-Use + Ollama + Playwright testing lab for Metl."
requires-python = ">=3.11"
dependencies = [
  "browser-use>=0.9.0",
  "playwright>=1.45.0",
  "python-dotenv>=1.0.1",
  "httpx>=0.27.0",
  "pydantic>=2.7.0"
]

[project.scripts]
metl-web-test = "web_test.__main__:main"
metl-web-test-agent = "web_test.agent:main"
metl-web-test-doctor = "web_test.doctor:main"
metl-web-test-smoke = "web_test.smoke:main"

[tool.setuptools.packages.find]
where = ["src"]
